styles.css
body {
  text-align: center;
  background-color: #011F3F;
}

#level-title {
  font-family: 'Press Start 2P', cursive;
  font-size: 3rem;
  margin:  5%;
  color: #FEF2BF;
}

.container {
  display: block;
  width: 100%;
  margin: auto;
}

.btn {
  margin: 25px;
  display: inline-block;
  height: 200px;
  width: 200px;
  border: 10px solid black;
  border-radius: 20%;
}

.game-over {
  background-color: red;
  opacity: 0.8;
}

.red {
  background-color: red;
}

.green {
  background-color: green;
}

.blue {
  background-color: blue;
}

.yellow {
  background-color: yellow;
}

.pressed {
  box-shadow: 0 0 20px white;
  background-color: grey;
}
.orange {
  background-color: #ff9f43;
}
.purple {
  background-color: #a55eea;
}

/* Hard ფერები */
.pink {
  background-color: #ff4757; 
}
.cyan {
  background-color: #0ed2f7;
}

.mode-container{
  display: flex;
  justify-content: start;
  margin-bottom: 20px;
  margin-left: 40px;
  gap: 10px;
}

.mode{
  background-color:#ca7505;
  padding: 10px;
  border-radius: 5px;
  cursor: pointer;
}

.on{
  background-color: #f50000;
}

.hide{
  display: none;
}

